
Changelog
=========

1.0.2 (unreleased)
------------------

- Richtextfields may now be exported to excel/csv/json. HTML is converted into
  text when this is done.
  [href]

- Dates in the excel/csv/json export are now uniformly exported in ISO8601.
  Fixes #116.
  [href]

- Reservation data is now stored more transparently. This has no effect
  for users, but it ensures better data integrity in the future. Fixes #119.
  [href]

- Integrates seantis.plonetools.
  [href]

- Make sure that the exposure checking method doesn't trip up if the resource
  may not be viewed and is therefore None. Fixes #114.
  [href]

1.0.18 (2014-01-21)
-------------------

- No longer throws an exception if the allocation cannot be found. Returns
  a 404 instead. Fixes #112.
  [href]

1.0.17
------

- The print link is now shown in the monthly_report. Fixes #33.
  [href]

- Custom e-mail templates now show a translated template upon creation, if the
  translation is available. Fixes #92.
  [href]

- Adds quota to email templates. Closes #41.
  [href]

- Clarify the received reservations email helptext, ensuring that it's clear 
  that this mail is sent in all cases. Closes #95.
  [href]

- Ensures that different logged in users don't see each others reservations.
  [deiferni]

1.0.16
------

- Fixes throttling being triggered on invalid reservations. Throttling should
  only be active if the reservation is actually made.

1.0.15
------

- Adds the ability to define pre-reservation script which may trigger
  validation errors on the reservation form.

1.0.14
------

- Adds the ability to print single reservations.

- Adds the ability to remove a reservation without sending an email.

1.0.13
------

- Adds a new 'latest reservations' report, showing reservations done in the last
  30 days.

1.0.12
------

- Removing expired sessions no longer results in orphan reserved slots. Existing
  orphan reserved slots are removed by the upgrade step.
